--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NMedia</string>
-    <string name="hello">Привет, Мир!</string>
+    <string name="hello">НМедиа!</string>
     <string name="description_post_author_avatar">Аватар автора поста</string>
     <string name="description_post_menu">Меню поста</string>
+    <string name="description_post_like">Нравиться пост</string>
+    <string name="app_name">Нмедиа</string>
+    <string name="description_post_share">Поделиться постом</string>
+    <string name="description_post_views">Количество просмотров поста</string>
 </resources>
