--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">НМедиа!</string>
+    <string name="app_name">NMedia</string>
+    <string name="hello">Привет, Мир!</string>
     <string name="description_post_author_avatar">Аватар автора поста</string>
     <string name="description_post_menu">Меню поста</string>
-    <string name="description_post_like">Нравиться пост</string>
-    <string name="app_name">Нмедиа</string>
-    <string name="description_post_share">Поделиться постом</string>
-    <string name="description_post_views">Количество просмотров поста</string>
-    <string name="remove_post_action">Удалить</string>
-    <string name="post_content_hint">Содержание поста</string>
-    <string name="edit_post_action">Изменить</string>
+    <string name="description_post_like">Нравится</string>
+    <string name="description_post_share">Поделиться</string>
+    <string name="description_post_save">Сохранить</string>
+    <string name="menu_edit">Изменить</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="post_text">Текст поста</string>
+    <string name="error_empty_content">Контент не может быть пустым</string>
+    <string name="chooser_share_post">Поделиться</string>
+    <string name="add_post">Добавить пост</string>
+    <string name="save">Сохранить</string>
+    <string name="description_post_views">Просмотров поста</string>
+    <string name="remove_post_action">Удалить пост</string>
+    <string name="edit_post_action">Изменить пост</string>
 </resources>
