--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="description_post_views">Post views</string>
     <string name="remove_post_action">Post remove</string>
     <string name="edit_post_action">Post edit</string>
+    <string name="description_post_video_play">Play video</string>
+    <string name="description_post_video_content">Video content</string> />
 </resources>
