--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
     <string name="channel_remote_name">Server notifications</string>
     <string name="channel_remote_description">Notifications from remote server</string>
+    <string name="menu_save">Save</string>
+    <string name="description_photo" />
+    <string name="remove" />
+    <string name="description_select_photo" />
+    <string name="description_take_photo" />
 </resources>
