--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,4 +22,10 @@
     <string name="channel_remote_name">Уведомления с сервера</string>
     <string name="channel_remote_description">Уведомления с удалённого сервера</string>
     <string name="menu_save">Save</string>
+    <string name="description_photo">фото</string>
+    <string name="remove">удалить</string>
+    <string name="description_select_photo">выбрать фото</string>
+    <string name="description_take_photo">сделать фото</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_back">назад</string>
 </resources>
