--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,10 @@
     <string name="channel_remote_name">Server notifications</string>
     <string name="channel_remote_description">Notifications from remote server</string>
     <string name="menu_save">Save</string>
-    <string name="description_photo" />
-    <string name="remove" />
-    <string name="description_select_photo" />
-    <string name="description_take_photo" />
+    <string name="description_photo" >description_photo</string>
+    <string name="remove" >remove</string>
+    <string name="description_select_photo" >description_select_photo</string>
+    <string name="description_take_photo" >description_take_photo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_back">back</string>
