--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,11 +21,15 @@
     <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
     <string name="channel_remote_name">Уведомления с сервера</string>
     <string name="channel_remote_description">Уведомления с удалённого сервера</string>
-    <string name="menu_save">Save</string>
+    <string name="menu_save">Сохранить</string>
     <string name="description_photo">фото</string>
     <string name="remove">удалить</string>
     <string name="description_select_photo">выбрать фото</string>
     <string name="description_take_photo">сделать фото</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_back">назад</string>
+    <string name="sign_in">Авторизоваться</string>
+    <string name="sign_up">Зарегистрироваться</string>
+    <string name="sign_out">Выйти</string>
+    <string name="login">Логин:</string>
+    <string name="password">Пароль:</string>
 </resources>
